# satellite-imagery-aesthetics

./: LICENSE  README.md  create_structure.sh  pyproject.toml  verify_structure.sh
src/satellite_imagery_aesthetics/: server.py
src/satellite_imagery_aesthetics/ologs/: imagery_profiles.yaml
tests/: run_tests.sh  test_server.py
