[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satellite-imagery-aesthetics"
version = "0.1.0"
description = "MCP server for satellite imagery aesthetic enhancement"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
